# traffic-viz

./: .gitignore  README.md  ROADMAP.org
.github/workflows/: windows-build.yml
backend/: app.spec  fcd.py  main.py  network-parsing.ipynb  pyproject.toml  requirements.txt
backend/app/: cache.py  camera_sequences.py  config.py  fcd.py  fcd_sumo.py  main.py  model.py  network.py  scene_settings.py  scene_thumbnail.py  serialization.py  util.py
backend/app/network/: api.py  opposite_marking.py  road.py  util.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CameraController.tsx  CameraSequenceList.tsx  ConfirmationModal.tsx  ModelConfigurator.tsx  NotificationSystem.tsx  Road.tsx  Scene.tsx  VehicleMeshes.tsx
frontend/src/gui/: BufferDebugList.tsx  CameraKeyframeManager.tsx  CameraPanel.tsx  CameraPlayback.tsx  CameraTimelineEditor.tsx  CanvasRecorderController.tsx  CanvasRecorderPanel.tsx  PlaybackControls.tsx  ReplayPanel.tsx  SceneSidebar.tsx  SimulationReplayPanel.tsx  VehicleList.tsx  VehicleTypesPanel.tsx  timelineGeometry.ts
frontend/src/pages/: HomePage.tsx  ModelConfiguratorPage.tsx  ModelLibraryPage.tsx  ScenePage.tsx
frontend/src/stores/: CameraStore.ts  KeyframeStore.ts  ReplayController.ts  SceneSettingsStore.ts  ThreeStore.ts  VehicleStore.ts  VehicleTypeStore.ts
frontend/src/utils/: modelThumbnail.ts  modelUtils.ts
scenes/tandem/: road.net.xml
